# devcontainer-python-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSES  README.md  build_docs.sh  docker-compose.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
api-docs/: conf.py  devcontainer_python_template.car.car_submodules.rst  devcontainer_python_template.car.rst  devcontainer_python_template.rst  devcontainer_python_template.train.rst  index.rst  modules.rst
devcontainer_python_template/: __init__.py  routes.py  sample_calc.py
devcontainer_python_template/car/: __init__.py  car.py
devcontainer_python_template/car/car_submodules/: car_types.py
devcontainer_python_template/train/: train.py
docs/: index.md
tests/: routes_test.py
