[tool.poetry]
name = "devcontainer-python-template"
version = "0.1.0"
description = ""
authors = ["okojomoeko <chikoro.size@gmail.com>"]
readme = "README.md"
packages = [{include = "devcontainer_python_template"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
pre-commit = "^3.2.0"
sphinx = "^6.1.3"
furo = "^2022.12.7"
pytest = "^7.3.0"
pip-licenses = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
